--- a/sys-auth/consolekit/ChangeLog
+++ b/sys-auth/consolekit/ChangeLog
@@ -1,434 +1,227 @@
 # ChangeLog for sys-auth/consolekit
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/consolekit/ChangeLog,v 1.104 2011/05/15 07:14:20 ssuominen Exp $
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
+# (auto-generated from git log)
 
-*consolekit-0.4.5 (15 May 2011)
+*consolekit-9999 (09 Aug 2015)
+*consolekit-0.9.5 (09 Aug 2015)
+*consolekit-0.9.4 (09 Aug 2015)
+*consolekit-0.4.6 (09 Aug 2015)
 
-  15 May 2011; Samuli Suominen <ssuominen@gentoo.org> +consolekit-0.4.5.ebuild:
-  Version bump.
+  09 Aug 2015; Robin H. Johnson <robbat2@gentoo.org> +consolekit-0.4.6.ebuild,
+  +consolekit-0.9.4.ebuild, +consolekit-0.9.5.ebuild, +consolekit-9999.ebuild,
+  +files/90-consolekit-3, +files/consolekit-0.2.rc,
+  +files/consolekit-0.4.5-polkit-automagic.patch,
+  +files/consolekit-cleanup_console_tags.patch,
+  +files/consolekit-shutdown-reboot-without-policies.patch,
+  +files/consolekit-udev-acl-install_to_usr.patch,
+  +files/pam-foreground-compat.ck, +metadata.xml:
+  proj/gentoo: Initial commit
 
-*consolekit-0.4.4-r1 (05 May 2011)
+  This commit represents a new era for Gentoo:
+  Storing the gentoo-x86 tree in Git, as converted from CVS.
 
-  05 May 2011; Samuli Suominen <ssuominen@gentoo.org>
-  +consolekit-0.4.4-r1.ebuild:
-  Use systemd.eclass to get path for unit files wrt #366111 by Michal Górny.
+  This commit is the start of the NEW history.
+  Any historical data is intended to be grafted onto this point.
 
-  23 Apr 2011; Samuli Suominen <ssuominen@gentoo.org> consolekit-0.4.4.ebuild:
-  ppc64 stable wrt #360769
+  Creation process:
+  1. Take final CVS checkout snapshot
+  2. Remove ALL ChangeLog* files
+  3. Transform all Manifests to thin
+  4. Remove empty Manifests
+  5. Convert all stale $Header$/$Id$ CVS keywords to non-expanded Git $Id$
+  5.1. Do not touch files with -kb/-ko keyword flags.
 
-  23 Apr 2011; Raúl Porcel <armin76@gentoo.org> consolekit-0.4.4.ebuild:
-  alpha/ia64/sh/sparc stable wrt #360769
+  Signed-off-by: Robin H. Johnson <robbat2@gentoo.org>
+  X-Thanks: Alec Warner <antarus@gentoo.org> - did the GSoC 2006 migration
+  tests
+  X-Thanks: Robin H. Johnson <robbat2@gentoo.org> - infra guy, herding this
+  project
+  X-Thanks: Nguyen Thai Ngoc Duy <pclouds@gentoo.org> - Former Gentoo
+  developer, wrote Git features for the migration
+  X-Thanks: Brian Harring <ferringb@gentoo.org> - wrote much python to improve
+  cvs2svn
+  X-Thanks: Rich Freeman <rich0@gentoo.org> - validation scripts
+  X-Thanks: Patrick Lauer <patrick@gentoo.org> - Gentoo dev, running new 2014
+  work in migration
+  X-Thanks: MichaÅ‚ GÃ³rny <mgorny@gentoo.org> - scripts, QA, nagging
+  X-Thanks: All of other Gentoo developers - many ideas and lots of paint on
+  the bikeshed
 
-  15 Apr 2011; Christian Faulhammer <fauli@gentoo.org>
-  consolekit-0.4.4.ebuild:
-  stable x86, bug 360769
+*consolekit-1.0.0 (13 Aug 2015)
 
-  12 Apr 2011; Jeroen Roovers <jer@gentoo.org> consolekit-0.4.4.ebuild:
-  Stable for HPPA (bug #360769).
+  13 Aug 2015; Jason Zaman <perfinion@gentoo.org> +consolekit-1.0.0.ebuild,
+  +files/consolekit-1.0.0.initd, metadata.xml:
+  1.0.0 version bump
 
-  10 Apr 2011; Markus Meier <maekke@gentoo.org> consolekit-0.4.4.ebuild:
-  arm stable, bug #360769
+  Added cgroup to IUSE and deps.
+  updated init script thanks to Lars Wendler
 
-  27 Mar 2011; Christoph Mende <angelos@gentoo.org> consolekit-0.4.4.ebuild:
-  Stable on amd64 wrt bug #360769
+  Gentoo-Bug: https://bugs.gentoo.org/557356
 
-  27 Mar 2011; Brent Baude <ranger@gentoo.org> consolekit-0.4.4.ebuild:
-  Marking consolekit-0.4.4 ppc for bug 360769
+  Package-Manager: portage-2.2.20.1
 
-*consolekit-0.4.4 (26 Feb 2011)
+  14 Aug 2015; Jason Zaman <perfinion@gentoo.org> consolekit-1.0.0.ebuild,
+  metadata.xml:
+  Make pm-utils optional
 
-  26 Feb 2011; Samuli Suominen <ssuominen@gentoo.org> +consolekit-0.4.4.ebuild:
-  Version bump.
+  Added the pm-utils useflag which is default enabled.
 
-  13 Jan 2011; Jeroen Roovers <jer@gentoo.org> consolekit-0.4.3.ebuild:
-  Stable for HPPA (bug #349052).
+  Gentoo-Bug: https://bugs.gentoo.org/557432
 
-  11 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>
-  consolekit-0.4.3.ebuild:
-  ppc stable wrt #349052
+  Package-Manager: portage-2.2.20.1
 
-  08 Jan 2011; Raúl Porcel <armin76@gentoo.org> consolekit-0.4.3.ebuild:
-  alpha/ia64/sh/sparc stable wrt #349052
+  18 Aug 2015; Jason Zaman <perfinion@gentoo.org> consolekit-1.0.0.ebuild,
+  metadata.xml:
+  Revert "sys-auth/consolekit: Make pm-utils optional"
 
-  27 Dec 2010; Markus Meier <maekke@gentoo.org> consolekit-0.4.3.ebuild:
-  arm stable, bug #349052
+  This reverts commit 1a6fa659a609adbca78b9a65fa217e20b9abf6ea.
 
-  22 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> consolekit-0.4.3.ebuild:
-  amd64/x86 stable wrt #349052
+  USE-flags should not control runtime-deps unless linked to.
 
-  19 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> consolekit-0.4.3.ebuild:
-  ppc64 stable wrt #349052
+  18 Aug 2015; Jason Zaman <perfinion@gentoo.org> consolekit-1.0.0.ebuild:
+  remove pm-utils dep add postinst message
 
-  27 Nov 2010; Raúl Porcel <armin76@gentoo.org> consolekit-0.4.2-r4.ebuild:
-  alpha/ia64/sh/sparc stable wrt #343097
+  It is an optional dep and cannot be contolled by a useflag.
 
-*consolekit-0.4.3 (25 Nov 2010)
+  Gentoo-Bug: https://bugs.gentoo.org/557432
 
-  25 Nov 2010; Samuli Suominen <ssuominen@gentoo.org> +consolekit-0.4.3.ebuild:
-  Version bump.
+  Package-Manager: portage-2.2.20.1
 
-  04 Nov 2010; Markus Meier <maekke@gentoo.org> consolekit-0.4.2-r4.ebuild:
-  arm stable, bug #343097
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> consolekit-0.9.4.ebuild,
+  consolekit-0.9.5.ebuild, consolekit-1.0.0.ebuild, consolekit-9999.ebuild:
+  Use https by default
 
-  01 Nov 2010; Jeroen Roovers <jer@gentoo.org> consolekit-0.4.2-r4.ebuild:
-  Stable for HPPA PPC (bug #343097).
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  01 Nov 2010; Christian Faulhammer <fauli@gentoo.org>
-  consolekit-0.4.2-r4.ebuild:
-  stable x86, bug 343097
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Use https by default
 
-  30 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
-  consolekit-0.4.2-r4.ebuild:
-  ppc64 stable wrt #343097
+  Convert all URLs for sites supporting encrypted connections from http to
+  https
 
-  29 Oct 2010; Markos Chandras <hwoarang@gentoo.org>
-  consolekit-0.4.2-r4.ebuild:
-  Stable on amd64 wrt bug #343097
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  28 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
-  consolekit-0.4.2-r4.ebuild:
-  Block <pambase-20101024 because of missing pam_loginuid.so.
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> consolekit-0.4.6.ebuild,
+  consolekit-0.9.4.ebuild, consolekit-0.9.5.ebuild, consolekit-1.0.0.ebuild,
+  consolekit-9999.ebuild:
+  Use https by default
 
-*consolekit-0.4.2-r4 (28 Oct 2010)
+  Convert all URLs for sites supporting encrypted connections from http to
+  https
 
-  28 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
-  +consolekit-0.4.2-r4.ebuild, +files/90-consolekit-3:
-  Change variable "STARTUP" to "command" wrt #343033 by Matthew Turnbull.
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  27 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
-  consolekit-0.4.2-r3.ebuild:
-  Check CONFIG_AUDITSYSCALL for /proc/<pid>/sessionid wrt #342291.
+  24 Aug 2015; Mike Gilbert <floppym@gentoo.org> metadata.xml:
+  Revert DOCTYPE SYSTEM https changes in metadata.xml
 
-*consolekit-0.4.2-r3 (21 Oct 2010)
+  repoman does not yet accept the https version.
+  This partially reverts eaaface92ee81f30a6ac66fe7acbcc42c00dc450.
 
-  21 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
-  +consolekit-0.4.2-r3.ebuild, +files/90-consolekit-2:
-  Update /etc/X11/xinit/xinitrc.d/90-consolekit from Debian. Remove
-  -revert.patch and block broken sys-apps/shadow instead wrt #336634.
+  Bug: https://bugs.gentoo.org/552720
 
-*consolekit-0.4.2-r2 (21 Oct 2010)
+  06 Sep 2015; Jason Zaman <perfinion@gentoo.org> -consolekit-0.9.4.ebuild,
+  -consolekit-0.9.5.ebuild:
+  Drop old
 
-  21 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
-  +consolekit-0.4.2-r2.ebuild,
-  +files/consolekit-0.4.2-check-for-VT_WAITEVENT-ioctl-during-runtime.patch:
-  Check for VT_WAITEVENT ioctl during runtime.
+  Package-Manager: portage-2.2.20.1
 
-*consolekit-0.4.2-r1 (09 Sep 2010)
+  07 Sep 2015; Jason Zaman <perfinion@gentoo.org> metadata.xml:
+  Add myself to maintainers
 
-  09 Sep 2010; Samuli Suominen <ssuominen@gentoo.org>
-  +consolekit-0.4.2-r1.ebuild, +files/consolekit-0.4.2-revert.patch:
-  Revert upstream "Only set sessions to be is-local=true if set by a trusted
-  party" wrt #336634.
+  07 Sep 2015; Jason Zaman <perfinion@gentoo.org> consolekit-1.0.0.ebuild:
+  Drop keywords for all arches I havent tested
 
-*consolekit-0.4.2 (07 Sep 2010)
+  Package-Manager: portage-2.2.20.1
 
-  07 Sep 2010; Samuli Suominen <ssuominen@gentoo.org>
-  +consolekit-0.4.2.ebuild:
-  Version bump.
+  08 Sep 2015; Jeroen Roovers <jer@gentoo.org> consolekit-1.0.0.ebuild:
+  Mark ~hppa (bug #559770).
 
-*consolekit-0.4.1-r1 (21 Aug 2010)
+  Package-Manager: portage-2.2.20.1
 
-  21 Aug 2010; Samuli Suominen <ssuominen@gentoo.org>
-  +consolekit-0.4.1-r1.ebuild, +files/consolekit-0.4.1-nodaemon.patch,
-  +files/consolekit-0.4.1-reorder-initialization.patch:
-  Don't take bus name until ready wrt #333349. Don't daemonize when
-  activated.
+  22 Sep 2015; Jeroen Roovers <jer@gentoo.org> consolekit-1.0.0.ebuild:
+  Mark ~ppc64 (bug #559770).
 
-  18 Aug 2010; Markus Meier <maekke@gentoo.org> consolekit-0.4.1.ebuild:
-  arm stable, bug #314899
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --ignore-arches
 
-  14 Aug 2010; Raúl Porcel <armin76@gentoo.org> consolekit-0.4.1.ebuild:
-  ia64/sh/sparc stable
+  22 Sep 2015; Tobias Klausmann <klausman@gentoo.org> consolekit-1.0.0.ebuild:
+  add ~alpha keyword
 
-  09 Aug 2010; Joseph Jezak <josejx@gentoo.org> consolekit-0.4.1.ebuild:
-  Marked ppc/ppc64 stable.
+  Gentoo-Bug: 559770
 
-  25 Jul 2010; Tobias Klausmann <klausman@gentoo.org>
-  consolekit-0.4.1.ebuild:
-  Stable on alpha, bug #329621
+  Package-Manager: portage-2.2.21
 
-  20 Jul 2010; Jeroen Roovers <jer@gentoo.org> consolekit-0.4.1.ebuild:
-  Stable for HPPA (bug #314899).
+  03 Oct 2015; Markus Meier <maekke@gentoo.org> consolekit-1.0.0.ebuild:
+  add ~arm, bug #560074
 
-  04 Jun 2010; Markus Meier <maekke@gentoo.org> consolekit-0.4.1.ebuild:
-  x86 stable, bug #314899
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="arm"
 
-  09 May 2010; Raúl Porcel <armin76@gentoo.org> consolekit-0.3.0-r2.ebuild:
-  sh stable
+*consolekit-1.0.0-r1 (09 Oct 2015)
 
-  03 May 2010; Olivier Crête <tester@gentoo.org> consolekit-0.4.1.ebuild:
-  amd64 stable, bug #314899
+  09 Oct 2015; Jason Zaman <perfinion@gentoo.org> +consolekit-1.0.0-r1.ebuild:
+  Add missing dbus dep
 
-  25 Apr 2010; Raúl Porcel <armin76@gentoo.org> consolekit-0.3.0-r2.ebuild,
-  consolekit-0.4.1.ebuild:
-  Add ~sh
+  Gentoo-Bug: https://bugs.gentoo.org/562674
 
-  13 Apr 2010; Alexis Ballier <aballier@gentoo.org> consolekit-0.4.1.ebuild:
-  keyword ~x86-fbsd
+  Package-Manager: portage-2.2.20.1
 
-  30 Mar 2010; Jonathan Callen <abcd@gentoo.org> consolekit-0.3.0-r2.ebuild,
-  consolekit-0.4.1.ebuild:
-  Bump to EAPI=3, add prefix keywords
+  20 Oct 2015; Jason Zaman <perfinion@gentoo.org> consolekit-9999.ebuild:
+  Update live ebuild
 
-  28 Feb 2010; Raúl Porcel <armin76@gentoo.org> consolekit-0.4.1.ebuild:
-  Add ~alpha/~arm/~ia64/~sparc
+  Package-Manager: portage-2.2.20.1
 
-  17 Feb 2010; Gilles Dartiguelongue <eva@gentoo.org>
-  consolekit-0.4.1.ebuild:
-  Raise dbus-glib dependency, bug #298924.
+  20 Oct 2015; Jason Zaman <perfinion@gentoo.org> consolekit-1.0.0-r1.ebuild:
+  Add epatch_user to 1.0.0-r1
 
-  16 Feb 2010; Joseph Jezak <josejx@gentoo.org> consolekit-0.4.1.ebuild:
-  Marked ~ppc/~ppc64 for bug #296548.
+  Package-Manager: portage-2.2.20.1
 
-  06 Jan 2010; Jeroen Roovers <jer@gentoo.org> consolekit-0.4.1.ebuild:
-  Marked ~hppa (bug #296548).
+  20 Oct 2015; Jason Zaman <perfinion@gentoo.org> consolekit-9999.ebuild:
+  S is wrong in live ebuild
 
-*consolekit-0.4.1 (29 Oct 2009)
+  Package-Manager: portage-2.2.20.1
 
-  29 Oct 2009; Gilles Dartiguelongue <eva@gentoo.org> files/90-consolekit,
-  -consolekit-0.2.3.ebuild, -files/consolekit-0.2.3-freebsd.patch,
-  -consolekit-0.2.10.ebuild, -consolekit-0.2.10-r1.ebuild,
-  -consolekit-0.3.0.ebuild, +files/consolekit-0.4.0-multilib.patch,
-  +files/consolekit-0.4.0-polkit-automagic.patch, +consolekit-0.4.1.ebuild,
-  +files/consolekit-0.4.1-shutdown-reboot-without-policies.patch:
-  New version for GNOME 2.28. Clean up old revision. Fix xinitrc script.
+  22 Dec 2015; Jason Zaman <perfinion@gentoo.org> -consolekit-1.0.0.ebuild:
+  Drop old unused
 
-  28 Oct 2009; Raúl Porcel <armin76@gentoo.org> consolekit-0.3.0-r2.ebuild:
-  ia64/m68k/s390/sh/sparc stable wrt #278181
+  Package-Manager: portage-2.2.24
 
-  03 Oct 2009; Markus Meier <maekke@gentoo.org> consolekit-0.3.0-r2.ebuild:
-  arm stable, bug #278181
+  22 Dec 2015; Jason Zaman <perfinion@gentoo.org> metadata.xml:
+  herd->maintainer
 
-  29 Sep 2009; Tobias Klausmann <klausman@gentoo.org>
-  consolekit-0.3.0-r2.ebuild:
-  Stable on alpha, bug #278181
+  Package-Manager: portage-2.2.24
 
-  27 Sep 2009; nixnut <nixnut@gentoo.org> consolekit-0.3.0-r2.ebuild:
-  ppc stable #278181
+  03 Jan 2016; Agostino Sarubbo <ago@gentoo.org> consolekit-1.0.0-r1.ebuild:
+  amd64 stable wrt bug #570122
 
-  22 Sep 2009; Jeroen Roovers <jer@gentoo.org> consolekit-0.3.0-r2.ebuild:
-  Stable for HPPA (bug #278181).
+  Package-Manager: portage-2.2.26
+  RepoMan-Options: --include-arches="amd64"
+  Signed-off-by: Agostino Sarubbo <ago@gentoo.org>
 
-  19 Sep 2009; Romain Perier <mrpouet@gentoo.org>
-  consolekit-0.3.0-r2.ebuild:
-  Stable for amd64 per bug #278181.
+*consolekit-1.0.1 (13 Jan 2016)
 
-  16 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
-  consolekit-0.3.0-r2.ebuild:
-  stable x86, bug 278181
+  13 Jan 2016; Jason Zaman <perfinion@gentoo.org> +consolekit-1.0.1.ebuild:
+  version bump to 1.0.1
 
-  14 Sep 2009; Tom Gall <tgall@gentoo.org> consolekit-0.3.0-r2:
-  stable on ppc64, bug #278181
+  Package-Manager: portage-2.2.26
 
-*consolekit-0.3.0-r2 (12 Sep 2009)
+  13 Jan 2016; Jason Zaman <perfinion@gentoo.org> consolekit-1.0.1.ebuild:
+  Add at_console compat hook only on linux
 
-  12 Sep 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
-  files/consolekit-0.1.rc, -consolekit-0.3.0-r1.ebuild,
-  +consolekit-0.3.0-r2.ebuild:
-  Use the (correct) pid file to control ConsoleKit start/stop. Also, do a
-  blank -r2 bump so users get the new init script.
+  Package-Manager: portage-2.2.26
 
-  12 Jun 2009; Gilles Dartiguelongue <eva@gentoo.org>
-  consolekit-0.3.0-r1.ebuild:
-  Make consolekit init script executable by default, closes: #260842.
+  24 Jan 2016; MichaÅ‚ GÃ³rny <mgorny@gentoo.org> metadata.xml:
+  Set appropriate maintainer types in metadata.xml (GLEP 67)
 
-  09 Jun 2009; Samuli Suominen <ssuominen@gentoo.org>
-  consolekit-0.3.0-r1.ebuild,
-  +files/consolekit-0.3.0-skip_xmlto_validation.patch:
-  Skip xmlto validation because 0.0.22 adds --noent to xmllint options and
-  documentation doesn't validate anymore wrt #271678, thanks to Darren Dale
-  for reporting.
+  05 Feb 2016; Jason Zaman <perfinion@gentoo.org> consolekit-1.0.1.ebuild,
+  metadata.xml:
+  Add pm-utils dep
 
-*consolekit-0.3.0-r1 (27 Apr 2009)
+  Package-Manager: portage-2.2.26
 
-  27 Apr 2009; Daniel Gryniewicz <dang@gentoo.org>
-  +files/consolekit-0.3.0-allow-setidle.patch, +consolekit-0.3.0-r1.ebuild:
-  Bump to consolekit-0.3.0-r1
+  05 Feb 2016; Jason Zaman <perfinion@gentoo.org> consolekit-1.0.1.ebuild,
+  consolekit-9999.ebuild:
+  Update live ebuild
 
-  - Add SetIdleHint to the dbus policy to handle the new default-deny on
-  dbus
-
-  17 Mar 2009; Peter Alfredsen <loki_val@gentoo.org>
-  consolekit-0.2.10.ebuild, consolekit-0.2.10-r1.ebuild,
-  consolekit-0.3.0.ebuild:
-  Bump dev-libs/glib dependency, since GRegex (added in glib-2.14) is used
-  by consolekit. Choose 2.16 so we don't have to bump it for a while. Bug
-  262853.
-
-  06 Mar 2009; Jeroen Roovers <jer@gentoo.org> consolekit-0.2.10.ebuild:
-  Stable for HPPA (bug #242270).
-
-  25 Feb 2009; Joseph Jezak <josejx@gentoo.org> consolekit-0.2.10.ebuild:
-  Marked ppc stable for bug #242270.
-
-*consolekit-0.3.0 (18 Feb 2009)
-
-  18 Feb 2009; Gilles Dartiguelongue <eva@gentoo.org>
-  +files/consolekit-0.3.0-shutdown.patch, metadata.xml,
-  +consolekit-0.3.0.ebuild:
-  Bump to 0.3.
-
-  17 Feb 2009; Raúl Porcel <armin76@gentoo.org> consolekit-0.2.10.ebuild:
-  arm/ia64/s390/sh/sparc stable wrt #242270
-
-*consolekit-0.2.10-r1 (15 Feb 2009)
-
-  15 Feb 2009; Gilles Dartiguelongue <eva@gentoo.org>
-  +files/consolekit-0.2.10-directory-leak.patch, +files/90-consolekit,
-  +files/consolekit-0.2.10-cleanup_console_tags.patch,
-  +files/consolekit-0.2.10-pam-add-nox11.patch,
-  +files/consolekit-0.2.10-polkit-automagic.patch,
-  +files/pam-foreground-compat.ck, -consolekit-0.2.1.ebuild,
-  +consolekit-0.2.10-r1.ebuild:
-  Bump to 0.2.10-r1.
-   * Add compatibility script for at_console dependant programs, bug #257761.
-   * Remove unneeded rm, bug #259096.
-   * Add a Xsession script for people not using gdm, bug #257763.
-   * Plug a leak, bug #258685.
-   * Add keepdirs and fix localstatedir, bug #257164.
-
-  15 Feb 2009; Markus Meier <maekke@gentoo.org> consolekit-0.2.10.ebuild:
-  x86 stable, bug #242270
-
-  12 Feb 2009; Brent Baude <ranger@gentoo.org> consolekit-0.2.10.ebuild:
-  stable ppc64, bug 242270
-
-  12 Feb 2009; Jeremy Olexa <darkside@gentoo.org> consolekit-0.2.10.ebuild:
-  amd64 stable, bug 242270
-
-  09 Feb 2009; Tobias Klausmann <klausman@gentoo.org>
-  consolekit-0.2.10.ebuild:
-  Stable on alpha, bug #242270
-
-  13 Jan 2009; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
-  gentopia is becoming freedesktop
-
-  09 Dec 2008; Alexis Ballier <aballier@gentoo.org>
-  consolekit-0.2.10.ebuild:
-  drop bsd patch that doesnt apply anymore, bug #231910
-
-*consolekit-0.2.10 (21 Jun 2008)
-
-  21 Jun 2008; Ben de Groot <yngwin@gentoo.org> +consolekit-0.2.10.ebuild:
-  Version bump. Fixes compilation with glibc-2.8, bug 225405.
-
-  06 Dec 2007; Steve Dibb <beandog@gentoo.org> consolekit-0.2.3.ebuild:
-  amd64 stable, bug 201103
-
-  06 Dec 2007; Raúl Porcel <armin76@gentoo.org> consolekit-0.2.3.ebuild:
-  alpha/ia64/sparc stable wrt #201103
-
-  05 Dec 2007; Jeroen Roovers <jer@gentoo.org> consolekit-0.2.3.ebuild:
-  Stable for HPPA (bug #201103).
-
-  04 Dec 2007; Markus Rothe <corsair@gentoo.org> consolekit-0.2.3.ebuild:
-  Stable on ppc64; bug #201103
-
-  04 Dec 2007; nixnut <nixnut@gentoo.org> consolekit-0.2.3.ebuild:
-  Stable on ppc wrt bug 201103
-
-  04 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
-  consolekit-0.2.3.ebuild:
-  stable x86, bug 201103
-
-  19 Nov 2007; Joshua Kinard <kumba@gentoo.org> consolekit-0.2.1.ebuild:
-  Stable on mips.
-
-  31 Oct 2007; Roy Marples <uberlord@gentoo.org>
-  +files/consolekit-0.2.3-freebsd.patch, consolekit-0.2.3.ebuild:
-  Add a workaround for a FreeBSD kernel bug so consolekit stops when in use.
-
-  18 Oct 2007; Roy Marples <uberlord@gentoo.org> consolekit-0.2.3.ebuild:
-  Keyworded ~x86-fbsd
-
-  15 Oct 2007; Doug Goldstein <cardoe@gentoo.org> consolekit-0.2.1.ebuild,
-  consolekit-0.2.3.ebuild:
-  if we're using glibc, we can't use version 2.4 because of missing defines
-  bug #195537
-
-  22 Sep 2007; Tom Gall <tgall@gentoo.org> consolekit-0.2.1.ebuild:
-  stable on ppc64
-
-*consolekit-0.2.3 (19 Sep 2007)
-
-  19 Sep 2007; Doug Goldstein <cardoe@gentoo.org> +consolekit-0.2.3.ebuild:
-  add latest ConsoleKit from Gentopia
-
-  06 Sep 2007; Doug Goldstein <cardoe@gentoo.org>
-  -files/consolekit-0.2.0-gdk-to-x11.patch,
-  -files/consolekit-0.2.0-pam-lib-fix.patch, -consolekit-0.2.0-r1.ebuild,
-  consolekit-0.2.1.ebuild:
-  remove old version. got Jon to make a website for it.
-
-  28 Aug 2007; Jeroen Roovers <jer@gentoo.org> consolekit-0.2.1.ebuild:
-  Stable for HPPA (bug #185823).
-
-  11 Aug 2007; Andrej Kacian <ticho@gentoo.org> consolekit-0.2.1.ebuild:
-  Stable on x86, bug #185823.
-
-  10 Aug 2007; Christoph Mende <angelos@gentoo.org> consolekit-0.2.1.ebuild:
-  Stable on amd64 wrt bug #185823
-
-  08 Aug 2007; Raúl Porcel <armin76@gentoo.org> consolekit-0.2.1.ebuild:
-  alpha/ia64 stable wrt #185823
-
-  07 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
-  consolekit-0.2.1.ebuild:
-  Stable on ppc wrt bug #185823.
-
-  07 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
-  consolekit-0.2.1.ebuild:
-  Stable on sparc wrt #185823
-
-  06 Aug 2007; Joshua Kinard <kumba@gentoo.org> consolekit-0.2.1.ebuild:
-  Marked unstable on mips.
-
-  19 May 2007; Raúl Porcel <armin76@gentoo.org> consolekit-0.2.1.ebuild:
-  Add ~alpha wrt #176517
-
-  11 Apr 2007; Doug Goldstein <cardoe@gentoo.org> consolekit-0.2.1.ebuild:
-  oops. left in some patches
-
-  11 Apr 2007; Doug Goldstein <cardoe@gentoo.org> consolekit-0.2.1.ebuild:
-  multilib fix for pam module
-
-*consolekit-0.2.1 (11 Apr 2007)
-
-  11 Apr 2007; Doug Goldstein <cardoe@gentoo.org> +consolekit-0.2.1.ebuild:
-  rev bump
-
-  10 Apr 2007; Doug Goldstein <cardoe@gentoo.org> -consolekit-0.2.0.ebuild,
-  consolekit-0.2.0-r1.ebuild:
-  sys-libs/pam -> virtual/pam for FreeBSD.
-
-  02 Apr 2007; Raúl Porcel <armin76@gentoo.org> consolekit-0.2.0-r1.ebuild:
-  Add ~ia64 wrt bug 172097
-
-  02 Apr 2007; Jeroen Roovers <jer@gentoo.org> consolekit-0.2.0-r1.ebuild:
-  Marked ~hppa (bug #172097).
-
-*consolekit-0.2.0-r1 (29 Mar 2007)
-
-  29 Mar 2007; Doug Goldstein <cardoe@gentoo.org>
-  +files/consolekit-0.2.0-gdk-to-x11.patch,
-  +files/consolekit-0.2.0-pam-lib-fix.patch, +consolekit-0.2.0-r1.ebuild:
-  Change GTK+ depend to X11. Fix /lib/ issues.
-
-  26 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
-  consolekit-0.2.0.ebuild:
-  Keyworded ~sparc wrt #172097
-
-  25 Mar 2007; Markus Rothe <corsair@gentoo.org> consolekit-0.2.0.ebuild:
-  Added ~ppc64; bug #172097
-
-  24 Mar 2007; Steev Klimaszewski <steev@gentoo.org>
-  consolekit-0.2.0.ebuild:
-  Add ~ppc (builds and works on my Efika) and add MAKEOPTS="$MAKEOPTS -j1" as it
-  doesn't appear to be parallel make safe.
-
-*consolekit-0.2.0 (24 Mar 2007)
-
-  24 Mar 2007; Steev Klimaszewski <steev@gentoo.org>
-  +files/consolekit-0.1.rc, +metadata.xml, +consolekit-0.2.0.ebuild:
-  New package, needed for GDM, but will hopefully soon replace pam_console
+  Package-Manager: portage-2.2.26
 
