--- a/sys-boot/efibootmgr/ChangeLog
+++ b/sys-boot/efibootmgr/ChangeLog
@@ -1,109 +1,99 @@
 # ChangeLog for sys-boot/efibootmgr
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-boot/efibootmgr/ChangeLog,v 1.29 2014/01/15 09:23:37 ago Exp $
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
+# (auto-generated from git log)
 
-  15 Jan 2014; Agostino Sarubbo <ago@gentoo.org> efibootmgr-0.5.4-r1.ebuild:
-  Stable for ia64, wrt bug #485596
+*efibootmgr-0.12 (09 Aug 2015)
+*efibootmgr-0.11.0 (09 Aug 2015)
+*efibootmgr-0.6.0 (09 Aug 2015)
+*efibootmgr-0.5.4-r1 (09 Aug 2015)
+*efibootmgr-0.5.4 (09 Aug 2015)
 
-*efibootmgr-0.6.0 (06 Nov 2013)
+  09 Aug 2015; Robin H. Johnson <robbat2@gentoo.org> +efibootmgr-0.5.4.ebuild,
+  +efibootmgr-0.5.4-r1.ebuild, +efibootmgr-0.6.0.ebuild,
+  +efibootmgr-0.11.0.ebuild, +efibootmgr-0.12.ebuild,
+  +files/efibootmgr-error-reporting.patch, +metadata.xml:
+  proj/gentoo: Initial commit
 
-  06 Nov 2013; Justin Lecher <jlec@gentoo.org> +efibootmgr-0.6.0.ebuild,
-  metadata.xml:
-  Version BUmp, #486062
+  This commit represents a new era for Gentoo:
+  Storing the gentoo-x86 tree in Git, as converted from CVS.
 
-  30 Oct 2013; Mike Gilbert <floppym@gentoo.org> efibootmgr-0.5.4-r1.ebuild,
-  efibootmgr-0.5.4.ebuild, metadata.xml:
-  Update DESCRIPTION, bug 489886 by Elias Probst.
+  This commit is the start of the NEW history.
+  Any historical data is intended to be grafted onto this point.
 
-  12 Oct 2013; Mike Frysinger <vapier@gentoo.org> efibootmgr-0.5.4-r1.ebuild:
-  Move flag/toolchain setup to src_configure.
+  Creation process:
+  1. Take final CVS checkout snapshot
+  2. Remove ALL ChangeLog* files
+  3. Transform all Manifests to thin
+  4. Remove empty Manifests
+  5. Convert all stale $Header$/$Id$ CVS keywords to non-expanded Git $Id$
+  5.1. Do not touch files with -kb/-ko keyword flags.
 
-  30 Sep 2013; Agostino Sarubbo <ago@gentoo.org> efibootmgr-0.5.4-r1.ebuild:
-  Stable for x86, wrt bug #485596
+  Signed-off-by: Robin H. Johnson <robbat2@gentoo.org>
+  X-Thanks: Alec Warner <antarus@gentoo.org> - did the GSoC 2006 migration
+  tests
+  X-Thanks: Robin H. Johnson <robbat2@gentoo.org> - infra guy, herding this
+  project
+  X-Thanks: Nguyen Thai Ngoc Duy <pclouds@gentoo.org> - Former Gentoo
+  developer, wrote Git features for the migration
+  X-Thanks: Brian Harring <ferringb@gentoo.org> - wrote much python to improve
+  cvs2svn
+  X-Thanks: Rich Freeman <rich0@gentoo.org> - validation scripts
+  X-Thanks: Patrick Lauer <patrick@gentoo.org> - Gentoo dev, running new 2014
+  work in migration
+  X-Thanks: Michał Górny <mgorny@gentoo.org> - scripts, QA, nagging
+  X-Thanks: All of other Gentoo developers - many ideas and lots of paint on
+  the bikeshed
 
-  28 Sep 2013; Agostino Sarubbo <ago@gentoo.org> efibootmgr-0.5.4-r1.ebuild:
-  Stable for amd64, wrt bug #485596
+  09 Aug 2015; Mikle Kolyada <zlogene@gentoo.org> efibootmgr-0.12.ebuild:
+  amd64 stable wrt bug #556876
 
-*efibootmgr-0.5.4-r1 (10 Jul 2013)
+  Package-Manager: portage-2.2.20
 
-  10 Jul 2013; Tomáš Chvátal <scarabeus@gentoo.org> +efibootmgr-0.5.4-r1.ebuild,
-  +files/efibootmgr-error-reporting.patch:
-  Revision bump with error reporting patch. Now you can see error messages, not
-  just return codes.
+  11 Aug 2015; Mikle Kolyada <zlogene@gentoo.org> efibootmgr-0.12.ebuild:
+  x86 stable wrt bug #556876
 
-  03 May 2012; Jeff Horelick <jdhore@gentoo.org> efibootmgr-0.5.4.ebuild:
-  dev-util/pkgconfig -> virtual/pkgconfig
+  Package-Manager: portage-2.2.20
 
-  13 Jan 2012; Mike Frysinger <vapier@gentoo.org> efibootmgr-0.5.4.ebuild:
-  Use common tc-getPKG_CONFIG helper.
+  19 Aug 2015; Mike Gilbert <floppym@gentoo.org> metadata.xml:
+  Drop proxy maintainer
 
-  03 Mar 2010; Raúl Porcel <armin76@gentoo.org> efibootmgr-0.5.4.ebuild:
-  Add dev-util/pkgconfig to DEPEND, bug #306125
+  Package-Manager: portage-2.2.20_p134
 
-  02 Jun 2009; Raúl Porcel <armin76@gentoo.org> -efibootmgr-0.5.3.ebuild,
-  efibootmgr-0.5.4.ebuild:
-  ia64 stable, remove old
+  24 Aug 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Use https by default
 
-  06 May 2009; Markus Meier <maekke@gentoo.org> efibootmgr-0.5.4.ebuild:
-  add ~amd64, bug #208639; assign RDEPEND
+  Convert all URLs for sites supporting encrypted connections from http to
+  https
 
-*efibootmgr-0.5.4 (20 Feb 2008)
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-  20 Feb 2008; Mike Frysinger <vapier@gentoo.org> +efibootmgr-0.5.4.ebuild:
-  Version bump.
+  24 Aug 2015; Mike Gilbert <floppym@gentoo.org> metadata.xml:
+  Revert DOCTYPE SYSTEM https changes in metadata.xml
 
-  14 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
-  efibootmgr-0.5.3.ebuild:
-  keyworded ~arch for x86, bug 208639
+  repoman does not yet accept the https version.
+  This partially reverts eaaface92ee81f30a6ac66fe7acbcc42c00dc450.
 
-  14 Aug 2007; Chris Gianelloni <wolf31o2@gentoo.org>
-  efibootmgr-0.5.3.ebuild:
-  Modified to use the same built_with_use logic as other ebuilds in the tree
-  and added --missing as reported on bug #188221.
+  Bug: https://bugs.gentoo.org/552720
 
-  11 Jul 2007; Raúl Porcel <armin76@gentoo.org> efibootmgr-0.5.3.ebuild:
-  Fix build failure if pciutils is built with zlib, thanks to Alexander
-  Færøy <eroyf at eroyf dot org> for the fix, bug #184005
+  24 Sep 2015; Agostino Sarubbo <ago@gentoo.org> efibootmgr-0.12.ebuild:
+  ia64 stable wrt bug #556876
 
-  22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
-  Redigest for Manifest2
+  Package-Manager: portage-2.2.20.1
+  RepoMan-Options: --include-arches="ia64"
 
-  27 Apr 2006; Alec Warner <antarus@gentoo.org>
-  files/digest-efibootmgr-0.4.2, files/digest-efibootmgr-0.5.0, Manifest:
-  Fixing SHA256 digest, pass four
+  01 Oct 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  Add missing remote-id type=github
 
-  01 Apr 2006; Aron Griffis <agriffis@gentoo.org> efibootmgr-0.5.3.ebuild:
-  Mark 0.5.3 stable on ia64
+  Signed-off-by: Justin Lecher <jlec@gentoo.org>
 
-*efibootmgr-0.5.3 (10 Mar 2006)
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Unify quoting in metadata.xml files for machine processing
 
-  10 Mar 2006; Aron Griffis <agriffis@gentoo.org> +efibootmgr-0.5.3.ebuild:
-  Bump to 0.5.3 (from 0.5.0). #120340
+  Force unified quoting in all metadata.xml files since lxml does not
+  preserve original use of single and double quotes. Ensuring unified
+  quoting before the process allows distinguishing the GLEP 67-related
+  metadata.xml changes from unrelated quoting changes.
 
-  05 Feb 2005; <plasmaroo@gentoo.org> efibootmgr-0.5.0.ebuild:
-  Mark stable on IA64.
+  24 Jan 2016; Michał Górny <mgorny@gentoo.org> metadata.xml:
+  Set appropriate maintainer types in metadata.xml (GLEP 67)
 
-  03 Feb 2005; <plasmaroo@gentoo.org> efibootmgr-0.5.0.ebuild:
-  0.5.0 requires sys-apps/pciutils to compile properly; adding into DEPEND.
-
-*efibootmgr-0.5.0 (31 Oct 2004)
-
-  31 Oct 2004; Mike Frysinger <vapier@gentoo.org> +efibootmgr-0.5.0.ebuild:
-  Version bump #69144 by splite.
-
-  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
-  efibootmgr-0.4.2.ebuild:
-  virtual/glibc -> virtual/libc
-
-  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> efibootmgr-0.4.2.ebuild:
-  Add inherit eutils
-
-  04 Mar 2004; <agriffis@gentoo.org> efibootmgr-0.4.2.ebuild:
-  stable on ia64
-
-*efibootmgr-0.4.2 (21 Jan 2004)
-
-  21 Jan 2004; <agriffis@gentoo.org> efibootmgr-0.4.2.ebuild, metadata.xml,
-  files/efibootmgr-0.4.1-makefile.patch:
-  Add efibootmgr for IA-64. This program allows you to configure the EFI boot
-  partition on IA-64 systems
