--- a/metadata/md5-cache/sys-devel/autogen-5.17.3
+++ b/metadata/md5-cache/sys-devel/autogen-5.17.3
@@ -2,12 +2,12 @@ DEFINED_PHASES=configure install prepare
 DEPEND=>=dev-scheme/guile-1.8 dev-libs/libxml2 !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.14.1:1.14 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
 DESCRIPTION=Program and text file generation
 EAPI=4
-HOMEPAGE=http://www.gnu.org/software/autogen/
+HOMEPAGE=https://www.gnu.org/software/autogen/
 IUSE=libopts
 KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~x86-freebsd ~amd64-linux ~arm-linux ~x86-linux ~x64-macos ~x86-macos
 LICENSE=GPL-2
 RDEPEND=>=dev-scheme/guile-1.8 dev-libs/libxml2
 SLOT=0
 SRC_URI=mirror://gnu/autogen/rel5.17.3/autogen-5.17.3.tar.xz
-_eclasses_=autotools	199350adb9ae3c85e275b1409e43c90d	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4
-_md5_=e89eb0ca70359504a35eb7c414fccc47
+_eclasses_=autotools	199350adb9ae3c85e275b1409e43c90d	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	7a212e5e01adfa4805c9978366e6ee85
+_md5_=d3cd3959828c16432677ed419b9fc7ed
