--- a/metadata/md5-cache/sys-devel/gcc-4.6.4
+++ b/metadata/md5-cache/sys-devel/gcc-4.6.4
@@ -3,13 +3,13 @@ DEPEND=elibc_glibc? ( >=sys-libs/glibc-2.8 ) >=sys-devel/binutils-2.18 >=sys-app
 DESCRIPTION=The GNU Compiler Collection
 EAPI=5
 HOMEPAGE=http://gcc.gnu.org/
-IUSE=multislot regression-test vanilla altivec debug nopie nossp doc gcj awt hardened multilib objc objc-gc mudflap libssp objc++ fixed-point +nls +nptl +cxx +fortran +openmp
+IUSE=multislot regression-test vanilla altivec debug doc gcj awt hardened multilib objc objc-gc mudflap libssp objc++ fixed-point +nls +nptl +cxx +fortran +openmp
 KEYWORDS=alpha amd64 arm hppa ia64 ~m68k ~mips ppc ppc64 ~s390 ~sh sparc x86 ~amd64-fbsd ~x86-fbsd
 LICENSE=GPL-3+ LGPL-3+ || ( GPL-3+ libgcc libstdc++ gcc-runtime-library-exception-3.1 ) FDL-1.3+
 PDEPEND=elibc_glibc? ( >=sys-libs/glibc-2.8 ) >=sys-devel/gcc-config-1.7
 RDEPEND=sys-libs/zlib nls? ( virtual/libintl ) virtual/libiconv >=dev-libs/gmp-4.3.2 >=dev-libs/mpfr-2.4.2 >=dev-libs/mpc-0.8.1
 RESTRICT=strip
 SLOT=4.6.4
-SRC_URI=mirror://gnu/gcc/gcc-4.6.4/gcc-4.6.4.tar.bz2 mirror://gentoo/gcc-4.6.4-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.6.4-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~rhill/dist/gcc-4.6.4-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.6.4-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~blueness/dist/gcc-4.6.4-uclibc-patches-1.0.tar.bz2 mirror://gentoo/gcc-4.6.4-patches-1.3.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.6.4-patches-1.3.tar.bz2 http://dev.gentoo.org/~rhill/dist/gcc-4.6.4-patches-1.3.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.6.4-patches-1.3.tar.bz2 http://dev.gentoo.org/~blueness/dist/gcc-4.6.4-patches-1.3.tar.bz2 mirror://gentoo/gcc-4.6.4-piepatches-v0.5.2.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.6.4-piepatches-v0.5.2.tar.bz2 http://dev.gentoo.org/~rhill/dist/gcc-4.6.4-piepatches-v0.5.2.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.6.4-piepatches-v0.5.2.tar.bz2 http://dev.gentoo.org/~blueness/dist/gcc-4.6.4-piepatches-v0.5.2.tar.bz2 mirror://gentoo/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~rhill/dist/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~blueness/dist/gcc-4.4.3-specs-0.2.0.tar.bz2 gcj? ( ftp://sourceware.org/pub/java/ecj-4.5.jar )
-_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	fixheadtails	c6fd1fc49c9dc11924f28a1406f251a0	flag-o-matic	c9602887773166fe300444712fc7ff98	gnuconfig	00a0530e40148c254cebb925df0e87ef	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	62927b3db3a589b0806255f3a002d5d3	pax-utils	dfe060cb70d89757fde5c1ff8405e950	toolchain	79b0a1d1153c017995d50b2a739e9164	toolchain-funcs	42408102d713fbad60ca21349865edb4	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=3427cd4c56d02c3e917f6c488a41a167
+SRC_URI=mirror://gnu/gcc/gcc-4.6.4/gcc-4.6.4.tar.bz2 mirror://gentoo/gcc-4.6.4-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.6.4-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~rhill/dist/gcc-4.6.4-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.6.4-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~blueness/dist/gcc-4.6.4-uclibc-patches-1.0.tar.bz2 mirror://gentoo/gcc-4.6.4-patches-1.3.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.6.4-patches-1.3.tar.bz2 http://dev.gentoo.org/~rhill/dist/gcc-4.6.4-patches-1.3.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.6.4-patches-1.3.tar.bz2 http://dev.gentoo.org/~blueness/dist/gcc-4.6.4-patches-1.3.tar.bz2 gcj? ( ftp://sourceware.org/pub/java/ecj-4.5.jar )
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	fixheadtails	2f44773656577fe2653bacc8bdcb2174	flag-o-matic	c9602887773166fe300444712fc7ff98	gnuconfig	3920de1188fc7bfee873515453ed1d10	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	62927b3db3a589b0806255f3a002d5d3	pax-utils	ecf634cba91bb9591a8fdb6f6145f1bb	toolchain	79b0a1d1153c017995d50b2a739e9164	toolchain-funcs	7a212e5e01adfa4805c9978366e6ee85	versionator	99ae9d758cbe7cfed19170e7d48f5a9c
+_md5_=5752d4a1da83b0ba34fbe500db32101c
